# bewise_first

./: .env.example  Dockerfile  Jenkinsfile  README.md  boot.sh  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4e2ee290df83_initial_db.py
app/: apiaccessor.py  config.py  core.py  database.py  dbaccessor.py  main.py  models.py  views.py
