[tool.poetry]
name = "bewise-first"
version = "0.1.0"
description = ""
authors = ["Ignatev Nikita <nikitaignatiev@gmail.com>"]
readme = "README.md"
packages = [{include = "bewise_first"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.13"
aiohttp = "^3.8.4"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"


[tool.poetry.group.prod.dependencies]
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
